# platypus-academy

./: .gitignore
agents/: pyproject.toml
agents/src/agents/: server.py
agents/src/agents.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
agents/src/agents/assistant/: agent.py
agents/src/agents/build_pipeline/: parser_agent.py  search_agent.py  validator_agent.py  wrappers.py
agents/src/agents/grading/: free_response.py
agents/src/agents/models/: assistant.py  question.py  search.py
agents/src/agents/router/: assistant.py  grade.py  search.py
backend/: pyproject.toml
backend/src/backend/: server.py
backend/src/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: .gitignore  README.md  log.txt  package-lock.json  package.json  run-dev.bat  run-dev.sh  tsconfig.json
frontend/src/: index.css
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ChatBubble.css  ChatBubble.tsx  ChatSidebar.css  ChatSidebar.tsx  CreateSession.css  CreateSession.tsx  EndSummary.css  EndSummary.tsx  HomePage.css  HomePage.tsx  LandingPage.css  LandingPage.tsx  PracticeWithChat.css  PracticeWithChat.tsx  QuestionRenderer.css  QuestionRenderer.tsx  SessionsTab.css  SessionsTab.tsx  SourceModal.css  SourceModal.tsx
frontend/src/contexts/: AuthContext.tsx  ChatProvider.tsx
frontend/src/hooks/: usePracticeChat.ts
frontend/src/lib/: api.ts  config.ts
frontend/src/services/: chatService.ts  gradingService.ts  mockQuestionService.ts  questionService.ts  sessionService.ts  userService.ts
frontend/src/types/: chat.ts  grading.ts  (+3 more)
(+21 files in other folders)
